Fixed cart screen spacing Made back to results act like back button instead of a route to home screen

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -611,3 +611,6 @@ li {
 .productInfo {
 	width: 600px;
 }
+.emptyCart {
+	width: 680px;
+}
